<resources>
    <string name="app_name">EcoUNIApp</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="informaci_n_del_estudiante">Información del estudiante</string>
    <string name="c_digo">Código:</string>
    <string name="email">Email:</string>
    <string name="informaci_n_personal">Información personal</string>
    <string name="celular">Celular:</string>
    <string name="cumplea_os">Cumpleaños:</string>
    <string name="foto">foto</string>
    <string name="ecouni">ecouni</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="recu_rdame">Recuérdame</string>
    <string name="ingresar">Ingresar</string>
    <string name="empecemos">Empecemos!</string>
    <string name="logo">logo</string>
    <string name="buscar">Buscar</string>
    <string name="cambiar_foto">Cambiar Foto</string>
    <string name="nombre">Nombre</string>
    <string name="facultad">Facultad (FC, FIC, etc)</string>
    <string name="escribe">Escribe algo sobre ti</string>
    <string name="check">check</string>
    <string name="close">close</string>
    <string name="feedback">Feedback</string>
    <string name="feeback_1">¿Qué novedades te gustaria encontrar en esta aplicación?</string>
    <string name="feedback_2">¿Qué otros premios crees que se debería incluir?</string>
    <string name="back">back</string>
    <string name="feedback_3">Déjanos alguna opinión más que consideres que debe</string>
    <string name="title_activity_premios">PremiosActivity</string>
    <string name="tab_premios">Premios</string>
    <string name="tab_info">Info</string>
    <string name="ptos">ptos</string>
    <string name="info_text">Puedes reclamar tu\npremio en pabellón\ncentral!!!</string>
    <string name="n_botellas">N° Botellas</string>
    <string name="ranking">Ranking</string>
    <string name="puntos">Puntos</string>
    <string name="top_10">Top 10</string>
    <string name="server_url">http://3.19.68.100:8080/ecouni/</string>
    <string name="codigo">codigo</string>
    <string name="guardando_cambios">Guardando cambios</string>
    <string name="reciclar">Reciclar</string>
    <string name="mes">Mes:</string>
    <string name="informaci_n">Información</string>
    <string name="premio">Premio</string>

    <string-array name="meses">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Setiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string name="title_activity_info">InfoActivity</string>
    <string name="tab_info_1">Top 10</string>
    <string name="tab_info_2">Localización</string>
    <string name="info">Info</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="en_construcci_n">En construcción</string>
    <string name="_1_0_pts">1.0 pts</string>
    <string name="flecha"><![CDATA[----->]]></string>
    <string name="reciclaje_de_botellas">Reciclaje de\nbotellas</string>
    <string name="se_necesita_tomar_foto_de_lo_reciclado">Se necesita tomar foto de lo reciclado</string>
    <string name="info_text_large">En la Universidad Nacional de Ingeniería no se práctica la valorización
        de residuos como es el reciclaje y la reutilización, por ello la necesidad de crear un sistema para
        incentivar a la comunidad universitaria a realizar buenas prácticas ambientales que puedan ser
        incluida en su rutina diaria.
        \n\n
        El objetivo de ECOUNI es crear un sistema de reciclaje que es monitoreado para el conteo
        de las botellas recicladas por el usuario para que puedan acceder a los premios.</string>
</resources>
