<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".presentation.view.PerfilActivity">

    <LinearLayout
        android:background="@color/menuPerfil"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        
        <ImageView
            android:onClick="back"
            android:layout_gravity="center_vertical"
            android:id="@+id/imageView3"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="48dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_arrow_back_white" />
        <TextView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/mi_perfil"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
        <ImageView
            android:contentDescription="@string/mi_perfil"
            android:layout_gravity="center_vertical"
            android:id="@+id/imageView"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_person_black_24dp" />
        <TextView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="0"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:background="@color/fondoFoto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:contentDescription="@string/foto"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/foto"
                    android:layout_width="150dp"
                    android:layout_height="150dp"/>

                <TextView
                    android:id="@+id/nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="24dp"
                    android:textSize="20sp"
                    tools:text="Luis Gómez" />
            </LinearLayout>

            <Button
                android:onClick="editar"
                android:id="@+id/editar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/editar_perfil"
                android:textAllCaps="false" />

            <TextView
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/fondoGris"
                android:fontFamily="serif"
                android:text="@string/informaci_n_del_estudiante"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/c_digo"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/codigo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="8dp"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    tools:text="20141469J" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/email"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="8dp"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    tools:text="lgomez@uni.pe" />

            </LinearLayout>

            <TextView
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/fondoGris"
                android:fontFamily="serif"
                android:text="@string/informaci_n_personal"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/celular"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/celular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="8dp"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    tools:text="957874657" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/cumplea_os"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/cumple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="8dp"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    tools:text="09/03/96" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>