<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.view.PuntosActivity">

    <LinearLayout
        android:background="@color/menuInfo"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:onClick="back"
            android:layout_gravity="center_vertical"
            android:id="@+id/imageView3"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="48dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_arrow_back_white" />
        <TextView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/info"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
        <ImageView
            android:contentDescription="@string/mi_perfil"
            android:layout_gravity="center_vertical"
            android:id="@+id/imageView"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_info_outline_black_24dp" />
        <TextView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="0"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:padding="36dp"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/info_text_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>



</LinearLayout>